validated motor control

--- a/Delta/platformio.ini
+++ b/Delta/platformio.ini
@@ -9,8 +9,23 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-platform = espressif32
-board = esp32dev
+platform = espressif8266
+board = esp07
 framework = arduino
 lib_deps =
   bblanchon/ArduinoJson@^6.19.5
+  me-no-dev/ESPAsyncUDP@0.0.0-alpha+sha.697c75a025
+  Wire 
+
+[env:motor_test]
+platform = espressif8266
+board = esp07
+framework = arduino
+lib_deps =
+  bblanchon/ArduinoJson@^6.19.5
+  me-no-dev/ESPAsyncUDP@0.0.0-alpha+sha.697c75a025
+build_src_filter =
+  +<motor_test_entry.cpp>
+  +<motor_control.cpp>
+build_flags =
+  -DEXCLUDE_FROM_MOTOR_TEST
